# AndroidSDL2Test

./: .gitmodules  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/pholin/androidsdl2test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/pholin/androidsdl2test/: MainActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/pholin/androidsdl2test/: ExampleUnitTest.java
